🐞fix(pricing): not aligned button
fixed alignment of button when text have different line in columns

--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,7 @@ header a:hover:not(.button-generic) {
 #pricing .modality-function {
   font-size: 1rem;
   margin-top: 2rem;
+  min-height: 200px;
 }
 
 #pricing .modality-button {
@@ -237,7 +238,9 @@ header a:hover:not(.button-generic) {
 
 #pricing .modality-button .button-generic {
   padding: 15px 25px;
+  min-height: 50px;
   text-align: center;
+  vertical-align: middle;
 }
 .checked,
 .notchecked {
